# streamlit-in-steps

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: food_ratings_test.csv
output/: food_ratings.csv
src/streamlit_in_steps/: streamlit_step_1.py  streamlit_step_2.py  streamlit_step_3.py  streamlit_step_4.py  streamlit_step_5.py
